--- a/main/document.tex
+++ b/main/document.tex
@@ -1,139 +1,9 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage{../main/mystyle}
 \begin{document}
-\subfile{../tex/chapter0.tex}
+\subfile{../tex/chapter1.tex}
+\subfile{../tex/chapter2.tex}
+\subfile{../tex/chaptern.tex}
 
-\section{Основные понятия}
-\begin{dfn}
-\textbf{Сигнатура} - множество имён операций с указанием их местности.
 
-$$(f^{(2)},g^{(3)},h^{(0)}), (+^{(2)},\cdot^{(3)})$$
-$h^{(0)}$ - символ константы,
-$V$ - имена переменных
-\end{dfn}
-
-\begin{dfn}
-\textbf{Терм} - выражение, составленное из символов сигнатуры и переменных
-
-\begin{enumerate}
-\item $x\in V$, $x$ - терм
-\item $c$ - символ константы, с - терм
-\item если $t_1,...,t_n$ - термы и $f$ - символ $n$-местной операции, то $f(t_1,...,t_n)$ - терм
-\end{enumerate}
-\end{dfn}
-
-\begin{exm}
-Примеры термов: $-(x),-(0),+(x,y),2+3+a$
-\end{exm}
-
-\begin{dfn}
-\textbf{Замкнутый терм} - терм, не содержащий переменных
-\end{dfn}
-
-\begin{dfn}
-\textbf{Универсальная алгебра} - пусть $\Sigma$ - сигнатура, тогда \textit{универсальная алгебра} сигнатуры $\Sigma$ - это пара вида $(A,I)$, где $A$ - произвольное непустое множество, а $I$ - некоторое отображение, которое для всякого $p^{(m)}\in \Sigma$, $I(p^{(m)})$ - $n$-местной операции на множестве
-\end{dfn}
-
-\begin{exm}
-Пример универсальной алгебры: пусть $\Sigma=(+^{(2)},\cdot^{(2)},-^{(1)},0^{(0)},1^{(0)})$, тогда
-\begin{equation*}
-\begin{split}
-R=(\mathbb{R},I) :& I(+) - \text{сложение}\\
-& I(\cdot) - \text{умножение}\\
-& I(-) - \text{вычитание}\\
-& I(0) - 0\\
-& I(1) - 1
-\end{split}
-\end{equation*}
-\end{exm}
-
-\begin{dfn}
-$\mathbb{R}$ называется \textbf{основным множеством} или носителем алгебры, а \
-$I$ - интерпретацией или интерпретирующей функцией
-\end{dfn}
-
-\begin{dfn}
-\textbf{Состояние} - функция, приписывающая переменной некоторый элемент носителя $\sigma :V\rightarrow A$
-\end{dfn}
-
-\begin{exm}
-Пример состояний: $\sigma = \left\{(x,3),(y,-8)\right\}, \sigma(x)=3$
-\end{exm}
-
-\begin{dfn}
-Значение терма на состоянии - значение того выражения, в котором переменные заменены их значениями
-
-\begin{enumerate}
-\item $t$ - переменная, $\sigma(t)$ - по определению состояния
-\item $t$ - символ константы, $I(t)=\sigma(t_1)=v_1$
-\item если $t_1,...,t_n$ - термы и $\sigma(t_1)=v_1,...,\sigma(t_n)=v_n$ , то $\sigma(t)=I(f)(v_1,...,v_n)$
-\end{enumerate}
-\end{dfn}
-
-\section{Изоморфизм}
-\begin{dfn}
-\textbf{Изоморфизм} - Пусть $\Sigma$ - сигнатура, $\mathbf{A}=(A,I)$, $\mathbf{B}=(B,J)$ - \\
- универсальные алгебры сигнатуры $\Sigma$, тогда изоморфизм между $\mathbf{A}$ и $\mathbf{B}$ - это $h:\mathbf{A}\rightarrow \mathbf{B}$ - биективная функция, которая удовлетворяет следующему условию:
-$$h(I(f_i)(a_1,...,a_n))=J(f_i)(h(a_1),...,h(a_n))$$
-для любых $a_1,...,a_n$ и $f_i\in \Sigma$
-\end{dfn}
-
-\begin{exm}
-Пример изоморфизма: пусть $\Sigma=(f^{(2)})$, $\mathbf{A}=(\mathbb{R},+)$, $\mathbf{B}=(\mathbb{R},\cdot)$
-
-Надо доказать: 
-$$h(a_1+a_2)=h(a_1)\cdot h(a_2)$$
-$a_1,a_2\in \mathbb{R}$
-
-Пусть $h(x)=e^x$, тогда
-$$h(a_1+a_2)=e^{a_1+a_2}=e^{a_1}\cdot e^{a_2}=h(a_1)\cdot h(a_2)\blacksquare$$
-\end{exm}
-
-\begin{thm}
-$h$ - изоморфизм между $A$ и $B$, то $h^{-1}$ - изоморфизм между $B$ и $A$
-\end{thm}
-\begin{proof} пусть $b_1,...,b_{n_i}\in B$, тогда надо доказать
-$$h^{-1}(J(f_i)(b_1,...,b_{n_i}))=I(f_i)(h^{-1}(b_1),...,h^{-1}(b_{n_i}))$$
-Так как $b_1=h(a_1),...,b_{n_i}=h(a_{n_i})$,
-$$I(f_i)(h^{-1}(b_1),...,h^{-1}(b_{n_i}))=I(f_i)(h^{-1}(h(a_1)),...,h^{-1}(h(a_{n_i})))=I(f_i)(a_1,...,a_{n_i})$$
-По определению изоморфизма
-$$h^{-1}(J(f_i)(b_1,...,b_{n_i}))=h^{-1}(h(I(f_i)(a_1,...,a_{n_1})))=I(f_i)(a_1,...,a_{n_1})$$
-Из этих двух равенств следует то, что надо доказать
-\end{proof}
-
-\begin{dfn}
-Системы, между которыми существует изоморфизм называют \textbf{изоморфными}
-$$\mathbf{A}\simeq\mathbf{B}$$
-операции в изоморфных системах обладают одними и теми же свойствами
-\end{dfn}
-
-\begin{dfn}
-$t(x_1,...,x_n)$ - терм $t$ не содержит других переменных кроме $x_1,...,x_n$
-\end{dfn}
-\begin{dfn}
-Пусть $\mathbf{A}$ - алгебра, $a_1,...,a_n$ - элементы алгебры $\mathbf{A}$, тогда
-$$t(a_1,...,a_n)=\sigma(t), \sigma(x_1)=a_1,...,\sigma(x_n)=a_n$$
-\end{dfn}
-\begin{thm}
-$h$ - изоморфизм между $\mathbf{A}=(A,I)$ и $\mathbf{B}=(B,J)$, то для любого терма $t(x_1,...,x_n)$ и любых $a_1,...,a_n$ выполняется
-$$h(t^{\mathbf{A}}(a_1,...,a_n))=t^{\mathbf{B}}(h(a_1),...,h(a_n))$$
-\end{thm}
-\begin{proof}
-Индукция по построению терма $t$
-\begin{enumerate}
-\item $t=x$
-$$t^{\mathbf{A}}(a)=a\Leftrightarrow h(t^{\mathbf{A}}(a))=h(a)\Leftrightarrow t^{\mathbf{B}}(h(a))=h(a)$$
-\item $t=c$
-$$\sigma(c)=I(c)=J(c)\Rightarrow t^{\mathbf{A}}=I(c), t^{\mathbf{B}}=J(c)\Rightarrow h(I(c))=J(c)$$
-по определению гомоморфизма
-\item $t=f(t_1,...,t_k)$
-\begin{multline*}
-h(t^{\mathbf{A}}(a_1,...,a_n))=\\
-h(I(f)(t^{\mathbf{A}}_{1}(a_1,...,a_n),...,t^{\mathbf{A}}_{k}(a_1,...,a_n)))=\\
-J(f)(h(t^{\mathbf{A}}_{1}(a_1,...,a_n)),...,h(t^{\mathbf{A}}_{k}(a_1,...,a_n)))=\\
-J(f)(t^{\mathbf{B}}_{1}(h(a_1),...,h(a_n)),...,t^{\mathbf{B}}_{k}(h(a_1),...,h(a_n))=\\
-t^{\mathbf{B}}(h(a_1),...,h(a_n))
-\end{multline*}
-\end{enumerate}
-\end{proof}
 \end{document}
