Added Groups and Monoids

--- a/main/document.tex
+++ b/main/document.tex
@@ -1,9 +1,12 @@
-\documentclass[12pt]{article}
+\documentclass[a4paper,12pt]{article}
 \usepackage{../main/mystyle}
 \begin{document}
 \subfile{../tex/chapter1.tex}
 \subfile{../tex/chapter2.tex}
-\subfile{../tex/chaptern.tex}
+\subfile{../tex/chapter3.tex}
+\subfile{../tex/chapter4.tex}
+\subfile{../tex/chapter5.tex}
+\subfile{../tex/chapter6.tex}
 
 
 \end{document}
