--- a/tex/chapter2.tex
+++ b/tex/chapter2.tex
@@ -3,14 +3,14 @@
 \begin{document}
 \section{Изоморфизм}
 \begin{dfn}
-\textbf{Изоморфизм} - Пусть $\Sigma$ - сигнатура, $\mathbf{A}=(A,I)$, $\mathbf{B}=(B,J)$ - \\
- универсальные алгебры сигнатуры $\Sigma$, тогда изоморфизм между $\mathbf{A}$ и $\mathbf{B}$ - это $h:\mathbf{A}\rightarrow \mathbf{B}$ - биективная функция, которая удовлетворяет следующему условию:
+\textbf{Изоморфизм} - Пусть $\Sigma$ - сигнатура, $\mathpzc{A}=(A,I)$, $\mathpzc{B}=(B,J)$ - \\
+ универсальные алгебры сигнатуры $\Sigma$, тогда изоморфизм между $\mathpzc{A}$ и $\mathpzc{B}$ - это $h:\mathpzc{A}\rightarrow \mathpzc{B}$ - биективная функция, которая удовлетворяет следующему условию:
 $$h(I(f_i)(a_1,...,a_n))=J(f_i)(h(a_1),...,h(a_n))$$
 для любых $a_1,...,a_n$ и $f_i\in \Sigma$
 \end{dfn}
 
 \begin{exm}
-Пример изоморфизма: пусть $\Sigma=(f^{(2)})$, $\mathbf{A}=(\mathbb{R},+)$, $\mathbf{B}=(\mathbb{R},\cdot)$
+Пример изоморфизма: пусть $\Sigma=(f^{(2)})$, $\mathpzc{A}=(\mathbb{R},+)$, $\mathpzc{B}=(\mathbb{R},\cdot)$
 
 Надо доказать: 
 $$h(a_1+a_2)=h(a_1)\cdot h(a_2)$$
@@ -34,7 +34,7 @@ $$h^{-1}(J(f_i)(b_1,...,b_{n_i}))=h^{-1}(h(I(f_i)(a_1,...,a_{n_1})))=I(f_i)(a_1,
 
 \begin{dfn}
 Системы, между которыми существует изоморфизм называют \textbf{изоморфными}
-$$\mathbf{A}\simeq\mathbf{B}$$
+$$\mathpzc{A}\simeq\mathpzc{B}$$
 операции в изоморфных системах обладают одними и теми же свойствами
 \end{dfn}
 
@@ -42,35 +42,35 @@ $$\mathbf{A}\simeq\mathbf{B}$$
 $t(x_1,...,x_n)$ - терм $t$ не содержит других переменных кроме $x_1,...,x_n$
 \end{dfn}
 \begin{dfn}
-Пусть $\mathbf{A}$ - алгебра, $a_1,...,a_n$ - элементы алгебры $\mathbf{A}$, тогда
+Пусть $\mathpzc{A}$ - алгебра, $a_1,...,a_n$ - элементы алгебры $\mathpzc{A}$, тогда
 $$t(a_1,...,a_n)=\sigma(t), \sigma(x_1)=a_1,...,\sigma(x_n)=a_n$$
 \end{dfn}
 \begin{thm}
-$h$ - изоморфизм между $\mathbf{A}=(A,I)$ и $\mathbf{B}=(B,J)$, то для любого терма $t(x_1,...,x_n)$ и любых $a_1,...,a_n$ выполняется
-$$h(t^{\mathbf{A}}(a_1,...,a_n))=t^{\mathbf{B}}(h(a_1),...,h(a_n))$$
+$h$ - изоморфизм между $\mathpzc{A}=(A,I)$ и $\mathpzc{B}=(B,J)$, то для любого терма $t(x_1,...,x_n)$ и любых $a_1,...,a_n$ выполняется
+$$h(t^{\mathpzc{A}}(a_1,...,a_n))=t^{\mathpzc{B}}(h(a_1),...,h(a_n))$$
 \end{thm}
 \begin{proof}
 Индукция по построению терма $t$
 \begin{enumerate}
 \item $t=x$
-$$t^{\mathbf{A}}(a)=a\Leftrightarrow h(t^{\mathbf{A}}(a))=h(a)\Leftrightarrow t^{\mathbf{B}}(h(a))=h(a)$$
+$$t^{\mathpzc{A}}(a)=a\Leftrightarrow h(t^{\mathpzc{A}}(a))=h(a)\Leftrightarrow t^{\mathpzc{B}}(h(a))=h(a)$$
 \item $t=c$
-$$\sigma(c)=I(c)=J(c)\Rightarrow t^{\mathbf{A}}=I(c), t^{\mathbf{B}}=J(c)\Rightarrow h(I(c))=J(c)$$
+$$\sigma(c)=I(c)=J(c)\Rightarrow t^{\mathpzc{A}}=I(c), t^{\mathpzc{B}}=J(c)\Rightarrow h(I(c))=J(c)$$
 по определению гомоморфизма
 \item $t=f(t_1,...,t_k)$
 \begin{multline*}
-h(t^{\mathbf{A}}(a_1,...,a_n))=\\
-h(I(f)(t^{\mathbf{A}}_{1}(a_1,...,a_n),...,t^{\mathbf{A}}_{k}(a_1,...,a_n)))=\\
-J(f)(h(t^{\mathbf{A}}_{1}(a_1,...,a_n)),...,h(t^{\mathbf{A}}_{k}(a_1,...,a_n)))=\\
-J(f)(t^{\mathbf{B}}_{1}(h(a_1),...,h(a_n)),...,t^{\mathbf{B}}_{k}(h(a_1),...,h(a_n))=\\
-t^{\mathbf{B}}(h(a_1),...,h(a_n))
+h(t^{\mathpzc{A}}(a_1,...,a_n))=\\
+h(I(f)(t^{\mathpzc{A}}_{1}(a_1,...,a_n),...,t^{\mathpzc{A}}_{k}(a_1,...,a_n)))=\\
+J(f)(h(t^{\mathpzc{A}}_{1}(a_1,...,a_n)),...,h(t^{\mathpzc{A}}_{k}(a_1,...,a_n)))=\\
+J(f)(t^{\mathpzc{B}}_{1}(h(a_1),...,h(a_n)),...,t^{\mathpzc{B}}_{k}(h(a_1),...,h(a_n))=\\
+t^{\mathpzc{B}}(h(a_1),...,h(a_n))
 \end{multline*}
 \end{enumerate}
 \end{proof}
 \begin{exm}
-Доказать что $\mathcal{A}=(\mathbb{R};\cdot)\not\cong\mathcal{B}=(\mathbb{R}^{+};\cdot)$
+Доказать что $\mathpzc{A}=(\mathbb{R};\cdot)\not\cong\mathpzc{B}=(\mathbb{R}^{+};\cdot)$
 \begin{proof}
-Предположим что существует изоморфизм $h:\mathcal{A}\rightarrow \mathcal{B}$, тогда
+Предположим что существует изоморфизм $h:\mathpzc{A}\rightarrow \mathpzc{B}$, тогда
 
 $h(0)=x, x\in \mathbb{R}^{+}$
 $$x=h(0)=h(0\cdot 0)=h(0)\cdot h(0)=x^2$$
@@ -84,16 +84,52 @@ $h(0)=1=h(1)$ - противоречие ($h$ не биективна). Утве
 \end{proof}
 \end{exm}
 \begin{exm}
-Доказать что $\mathcal{A}=(\mathbb{R};+)\not\cong\mathcal{B}=(\mathbb{R};\cdot)$
+Доказать что $\mathpzc{A}=(\mathbb{R};+)\not\cong\mathpzc{B}=(\mathbb{R};\cdot)$
 \begin{proof}
-Предположим что существует изоморфизм $h:\mathcal{B}\rightarrow \mathcal{A}$, тогда
+Предположим что существует изоморфизм $h:\mathpzc{B}\rightarrow \mathpzc{A}$, тогда
 
 $h(0)=x, h(1)=y; x,y\in \mathbb{R}$
+$$x=h(0)=h(0\cdot 0)=h(0)+ h(0)=2x\Rightarrow x=2x=0$$
+$$y=h(1)=h(1\cdot 1)=h(1)+ h(1)=2y\Rightarrow y=2y=0$$
+Противоречие ($h$ должно быть биекцией)
 \end{proof}
 \end{exm}
 
+\begin{exm}
+Доказать что $\mathpzc{A}=(\mathbb{R};\cdot)\cong\mathpzc{B}=(\mathbb{C};\cdot)$
+\begin{proof}
+Предположим что существует изоморфизм $h:\mathpzc{B}\rightarrow \mathpzc{A}$, тогда
 
-%% my chapter 1 content
-%%
-%% more of my chapter 1 content
+$h(x)=-1; x\in \mathbb{C},-1\in \mathbb{R}$
+
+\end{proof}
+\end{exm}
+
+\begin{exm}
+Доказать что $\mathpzc{A}=(\mathbb{Z};{\operatorname{min}}^{(2)})\not\cong\mathpzc{B}=(\mathbb{Z};{\operatorname{max}}^{(2)})$
+\begin{proof}
+
+\end{proof}
+\end{exm}
+
+\begin{exm}
+Доказать что $\mathpzc{A}=(\omega;+)\not\cong\mathpzc{B}=(\omega^+;\cdot)$
+\begin{proof}
+
+\end{proof}
+\end{exm}
+
+\begin{exm}
+Доказать что $\mathpzc{A}=(\mathbb{Q};+)\not\cong\mathpzc{B}=(\mathbb{Q}^+;\cdot)$
+\begin{proof}
+
+\end{proof}
+\end{exm}
+
+\begin{exm}
+Доказать что $\mathpzc{A}=(\mathbb{Z};\cdot)\not\cong\mathpzc{B}=(\mathbb{G};\cdot)$
+\begin{proof}
+
+\end{proof}
+\end{exm}
 \end{document}
