--- a/tex/chapter5.tex
+++ b/tex/chapter5.tex
@@ -2,12 +2,11 @@
 
 \begin{document}
 \section{Полугруппы и моноиды}
-\begin{dfn}
+\begin{dfn}[Полугруппа]
 Полугруппа - многообразие заданное множеством
 $$(x*y)*z=x*(y*z)$$
 \end{dfn}
-\begin{exm}
-Примеры полугрупп:
+\begin{exm}[Примеры полугрупп]
 \end{exm}
 \begin{thm}
 Значение терма не зависит от расстановки скобок (Ассоциативный закон)
@@ -29,13 +28,12 @@ t=t_1*t_2=(a_{1}a_{2}...a_{m})(a_{m+1}...a_n)=(a_{1}a_{2}...a_{m})(a_{m+1}...a_{
 \end{enumerate}
 \end{proof}
 \end{thm}
-\begin{dfn}
+\begin{dfn}[Нейтральный элемент]
 $e_l$ называется \textbf{нейтральным слева} в полугруппе, если $e_l*a=a$ для всех $a$,
 $e_r$ называется \textbf{нейтральным справа} в полугруппе, если $a*e_r=a$ для всех $a$,
 $e$ - нейтральный слева и справа
 \end{dfn}
-\begin{exm}
-Примеры нейтрального элемента:
+\begin{exm}[Примеры нейтрального элемента]
 
 $(\omega,+)$ - $0$, $(\omega,\cdot)$ - $1$, $(\omega,max)$ - $0$, $(\omega,min)$ - нет нейтрального
 \end{exm}
@@ -48,7 +46,7 @@ $$e_l=e_l*e_r=e_r$$
 \begin{cnsq}
 Если нейтральный элемент существует, то он единственный.
 \end{cnsq}
-\begin{dfn}
+\begin{dfn}[Моноид]
 Моноид - полугруппа с нейтральным элементом ИЛИ
 
 Моноид - это элементы многообразия, которые определяются равенствами
@@ -59,8 +57,7 @@ x*e=x\\
 e*x=x
 \end{cases}$$
 \end{dfn}
-\begin{exm}
-Примеры моноидов:
+\begin{exm}[Примеры моноидов]
 
 $(\omega,+,0)$, $(\omega,\cdot,1)$, $(\omega,max,0)$
 
@@ -86,7 +83,7 @@ $$((f\circ g)h)(a)=(f(g\circ h))(a)$$
 
 \end{proof}
 \end{exm}
-\begin{dfn}
+\begin{dfn}[Свободный моноид]
 Свободный моноид - моноид, элементами которого являются конечные последовательности (строки) элементов носителя моноида. Свободный моноид на множестве $A\neq \emptyset$ это $\mathcal{A}=(A^*;\&,\varepsilon)$, $A^*$ - множество всех слов в алфавите $A$, $\&$ - конкатенация, $\varepsilon$ - пустое слово.
 \end{dfn}
 \begin{thm}
@@ -106,8 +103,7 @@ h(u)*h(v)=h(a_1...a_n)*h({a'}_1...{a'}_n)=\\
 Из этого следует что $h(u\&v)=h(u)*h(v)$
 \end{proof}
 \end{thm}
-\begin{exm}
-Примеры свободных моноидов и их гомоморфных образов:
+\begin{exm}[Примеры свободных моноидов и их гомоморфных образов]
 
 Пусть дан алфавит $A=\{1\}$, который образует $A^*=\{\varepsilon,1,11,...\}$ и моноид $\mathcal{A}=(A^*;\&,\varepsilon)$, тогда
 \begin{enumerate}
@@ -116,9 +112,8 @@ h(u)*h(v)=h(a_1...a_n)*h({a'}_1...{a'}_n)=\\
 \end{enumerate}
 \end{exm}
 
-\begin{dfn}
-
-Циклический моноид - моноид порождённый одним элементом. $<a>$ - циклический моноид, порождённый элементом $a$.
+\begin{dfn}[Циклический моноид]
+Циклический моноид - моноид порождённый одним элементом. $<a>$ - циклический моноид, порождённый элементом $a$. 
 
 $e,a,a^1,a^2,a^3,...$ - элементы моноида $<a>$
 
@@ -137,10 +132,10 @@ a^k=a^i\underbrace{a^{j-i}...a^{j-i}}_{y}a^r=\\
 a^ia^r=a^{i+r} (r<j-i; i+r<j)
 \end{multline*}
 \end{enumerate}
-\end{dfn} %% к чему весь этот список?
+к чему весь этот список?
+\end{dfn}
 
-\begin{exm}\label{cyclical-exm}
-Пример циклическокококого моноида:
+\begin{exm} [Пример циклического моноида]\label{cyclical-exm}
 $<a>=(\{e,a,...\};*)$
 
 Таблица умножения $(*)$ -
@@ -178,16 +173,15 @@ $$a^{x+y}=a^k=a^{i+(x+y-i)mod(j-i)}$$
 \end{proof}
 \end{thm}
 
-\begin{dfn}
+\begin{dfn}[Идемпотент]
 Идемпотент - элемент моноида $a$, такой что $a^2=a$
 \end{dfn}
 
-\begin{exm}
-Примеры идемпотентов:
+\begin{exm}[Примеры идемпотентов]
 $(\omega;+)$ - $0$
 \end{exm}
 
-\begin{dfn}
+\begin{dfn}[Моноид типа $(i,j-i)$]
 Моноид типа $(i,j-i)$ - моноид с элементами $$???$$
 \end{dfn}
 
@@ -198,7 +192,7 @@ $(\omega;+)$ - $0$
 \end{proof}
 \end{thm}
 
-\begin{dfn}
+\begin{dfn}[Обратный элемент]
 $b_l$ - левый обратный для элемента $a$, если $b_l*a=e$,
 $b_r$ - правый обратный для элемента $a$, если $a*b_l=e$,
 $b$ - обратный для элемента $a$, если $b*a=a*b=e$
@@ -237,8 +231,7 @@ $$
 
 \end{exm}
 
-\begin{exm}
-Пример изоморфизма:
+\begin{exm}[Пример изоморфизма]
 Доказать
 $$(P(A\cup B);\cup,\cap)\cong (P(A);\cup,\cap)\times (P(B);\cup,\cap)$$
 где $P(A)$ - множество всех подмножеств множества $A$
@@ -251,8 +244,8 @@ $$h(x_1\cap x_2)=h(x_1)\cap h(x_2)$$
 По сути функция $h$ должна выдавать пару, первая часть которой состоит из элементов $A$, вторая из $B$
 \end{proof}
 \end{exm}
-\begin{exm}
-Пример полугруппы: является ли $(\omega,\NOD())$ полугруппой
+\begin{exm}[Пример полугруппы]
+Является ли $(\omega,\NOD())$ полугруппой
 \begin{proof}
 Предположим что является, надо доказать
 $$\NOD(\NOD(x,y),z)=\NOD(x,\NOD(y,z))$$
@@ -269,7 +262,7 @@ $$d|x,d|y\Rightarrow d|\NOD(y,z)$$
 \end{enumerate}
 \end{proof}
 \end{exm}
-\begin{exm}
+\begin{exm}[Построение моноидов]
 Построить все моноиды из двух элементов $\{e,x\}$
 
 $$A_1=(\{e,x\};*_1), A_2=(\{e,x\};*_2)$$
@@ -321,10 +314,10 @@ $$x*(x*x)=x*e=e*x=(x*x)*x$$
 \end{proof}
 \end{thm}
 
-\begin{dfn}
+\begin{dfn}[Сократимый элемент]
 Сократимый слева (справа) - такой элемент моноида, что из $ax=ay$ ($xa=ya$) следует $x=y$ 
 \end{dfn}
-\begin{exm}
+\begin{exm}[Пример сократимого элемента]
 $(\mathbb{Z},+,0)$, $x+a=y+a\Rightarrow x=y$
 \end{exm}
 \begin{thm}
@@ -343,7 +336,7 @@ $a$ несократим
 $ax=ay\Rightarrow b_lax=b_lay\Rightarrow ex=ey\Rightarrow x=y$, следовательно $a$ - сократимый слева
 \end{proof}
 \end{thm}
-\begin{exm}
-$(\mathbb{Z}^+,\cdot,1)$, обратимый только 1, сократимы все. (Какой к половым органам это пример?)
+\begin{exm}[Пример обратимого элемента]
+$(\mathbb{Z}^+,\cdot,1)$, обратимый только $1$, сократимы все. (Какой к половым органам это пример?)
 \end{exm}
 \end{document}
