--- a/tex/chapter6.tex
+++ b/tex/chapter6.tex
@@ -2,10 +2,10 @@
 
 \begin{document}
 \section{Группы}
-\begin{dfn}
+\begin{dfn}[Группа]
 Группа - моноид, в котором все элементы обратимы
 \end{dfn}
-\begin{dfn}
+\begin{dfn}[Тривиальная группа]
 Тривиальная группа - группа, состоящая из одного элемента
 \end{dfn}
 \begin{thm}
@@ -70,8 +70,7 @@ $$\widehat{(a,e)}=\widehat{(b,e)}\Rightarrow (a,e)\equiv(b,e)\Rightarrow ae=eb \
 
 \end{proof}
 \end{thm}
-\begin{exm}
-Пример на теорему Гротендика:
+\begin{exm}[Пример на теорему Гротендика]
 \end{exm}
 \begin{thm}\label{group-qualities}
 $G$ - группа тогда и только тогда, когда
@@ -102,45 +101,41 @@ $G$ - группа
 \begin{cnsq}
 Группы образуют многообразие в сигнатуре $(*,e,{ }^{-1})$
 \end{cnsq}
-\begin{dfn}
+\begin{dfn}[Аддитивная группа]
 Аддитивная группа - группа со сложением
 \end{dfn}
-\begin{exm}
-Примеры аддитивных групп:
+\begin{exm}[Примеры аддитивных групп]
 $(\mathbb{Z};+)$
 \end{exm}
-\begin{dfn}
+\begin{dfn}[Мультипликативная группа]
 Мультипликативная группа - группа с умножением
 \end{dfn}
-\begin{exm}
-Примеры мультипликативных групп:
+\begin{exm}[Примеры мультипликативных групп]
 $(\mathbb{Q};\cdot)$
 \end{exm}
-\begin{dfn}
-Множество вычетов - 
+\begin{dfn}[Множество вычетов]
 \end{dfn}
-\begin{exm}
+\begin{exm}[Пример Множества вычетов]
 \end{exm}
-\begin{dfn}
+\begin{dfn}[Матричная группа]
 Матричные группы: носитель группы - $M^*_n(R)$ и $det\neq 0$
 \end{dfn}
-\begin{exm}
-Примеры матричных групп:
+\begin{exm}[Примеры матричных групп]
 \begin{enumerate}
 \item $(M^*_n,\cdot,E,{ }^{-1})$ - группа, не коммутативная
 \item $det=\pm 1$ - группа
 \item $O_n$ - ортогональные, $(O_n,\cdot,E,{ }^{-1})$ - группа
 \end{enumerate}
 \end{exm}
-\begin{dfn}
+\begin{dfn}[Группа перестановок]
 Группа перестановок - группа перестановок множества $S$ называется группа всех биекций $f:S\rightarrow S$. $(F,\circ,e,{ }^{-1})$
 \end{dfn}
-\begin{exm}
+\begin{exm}[Пример группы перестановок]
 \end{exm}
-\begin{dfn}
+\begin{dfn}[Симметрическая группа порядка]
 Симметрическая группа порядка $n$: $S$ - конечно и состоит из $n$ элементов. $(A,\circ,e,{ }^{-1})$, $A$ - множество автоморфизмов $h:S\rightarrow S$
 \end{dfn}
-\begin{exm} \label{TriangleGroup}
+\begin{exm}[Пример симметрической группы] \label{TriangleGroup}
 Пример симметрической группы:
 
 \begin{tikzpicture}
@@ -176,7 +171,7 @@ $s_3$ & $x$ & $x$& $e$ & $x$& $e$ & $x$ \\
 \end{table}
 \end{exm}
 
-\begin{dfn}
+\begin{dfn}[Группа кос]
 Группа кос - 
 
 \begin{tikzpicture}
@@ -219,7 +214,7 @@ $$be=dae=da=b\Rightarrow be=b$$
 \item $(a^{-1})^{-1}=a$
 \end{enumerate}
 \end{thm}
-\begin{dfn}
+\begin{dfn}[Абелева группа]
 Абелева группа - группа, в которой $xy=yx$
 \end{dfn}
 
