--- a/main/document.tex
+++ b/main/document.tex
@@ -3,10 +3,12 @@
 \begin{document}
 \subfile{../tex/chapter1.tex}
 \subfile{../tex/chapter2.tex}
+\subfile{../tex/chapter2-5.tex}
 \subfile{../tex/chapter3.tex}
 \subfile{../tex/chapter4.tex}
 \subfile{../tex/chapter5.tex}
 \subfile{../tex/chapter6.tex}
-
-
+\subfile{../tex/chapter7.tex}
+\subfile{../tex/chapter8.tex}
+\subfile{../tex/chapter9.tex}
 \end{document}
