Added more definitions in rings

--- a/main/mystyle.sty
+++ b/main/mystyle.sty
@@ -26,9 +26,11 @@
 \newtheorem{thm}{Теорема}[section]
 \theoremstyle{definition}
 \newtheorem{dfn}{Определение}[section]
-
 \theoremstyle{plain}
 \newtheorem{exm}{Пример}[section]
+\theoremstyle{plain}
+\newtheorem{lemma}{Лемма}[section]
+
 
 \newcommand{\bigslant}[2]{{\raisebox{.2em}{$#1$}\left/\raisebox{-.2em}{$#2$}\right.}}
 \def\dotminus{\mathbin{\ooalign{\hss\raise1ex\hbox{.}\hss\cr
