Reworked chapters into questions

--- a/exam/question0.tex
+++ b/exam/question0.tex
@@ -1,7 +1,7 @@
 \documentclass[../main/document.tex]{subfiles}
 
 \begin{document}
-heh
+\section{Полугруппы и моноиды}
 %% my chapter 1 content
 %%
 %% more of my chapter 1 content
