--- a/exam/question2.tex
+++ b/exam/question2.tex
@@ -1,7 +1,7 @@
 \documentclass[../main/document.tex]{subfiles}
 
 \begin{document}
-\section{Подалгебры и вложения}
+\section{Подалгебры, порождающие элементы, вложения}
 \begin{dfn}
 Подалгебра - алгебра $\mathcal{B}=(B,J)$ является подалдгеброй $\mathcal{A}=(A,I)$, если $B\subseteq A$ и $J(f)$ - ограничение на $B$ для всякого $f$
 \end{dfn}
