--- a/exam/question9.tex
+++ b/exam/question9.tex
@@ -1,7 +1,7 @@
 \documentclass[../main/document.tex]{subfiles}
 
 \begin{document}
-\section{Подгруппы}
+\section{Подгруппы, смежные классы, порядок и индекс подгруппы}
 \begin{dfn}[Подгруппа]
 Подгруппа - подмножество H группы G, само являющееся группой относительно операции, определяющей G\\
 Подгруппа - подалгебра в группе
