--- a/main/document.tex
+++ b/main/document.tex
@@ -1,14 +1,26 @@
 \documentclass[a4paper,12pt]{article}
 \usepackage{../main/mystyle}
 \begin{document}
-\subfile{../tex/chapter1.tex}
-\subfile{../tex/chapter2.tex}
-\subfile{../tex/chapter2-5.tex}
-\subfile{../tex/chapter3.tex}
-\subfile{../tex/chapter4.tex}
-\subfile{../tex/chapter5.tex}
-\subfile{../tex/chapter6.tex}
-\subfile{../tex/chapter7.tex}
-\subfile{../tex/chapter8.tex}
-\subfile{../tex/chapter9.tex}
+
+\tableofcontents
+\newpage
+
+\subfile{../exam/question1.tex}
+\subfile{../exam/question2.tex}
+\subfile{../exam/question3.tex}
+\subfile{../exam/question4.tex}
+\subfile{../exam/question5.tex}
+\subfile{../exam/question6.tex}
+\subfile{../exam/question7.tex}
+\subfile{../exam/question8.tex}
+\subfile{../exam/question9.tex}
+\subfile{../exam/question10.tex}
+\subfile{../exam/question11.tex}
+\subfile{../exam/question12.tex}
+\subfile{../exam/question13.tex}
+\subfile{../exam/question14.tex}
+\subfile{../exam/question15.tex}
+\subfile{../exam/question16.tex}
+\subfile{../exam/question17.tex}
+\subfile{../exam/question18.tex}
 \end{document}
