--- a/exam/question16.tex
+++ b/exam/question16.tex
@@ -1,7 +1,7 @@
 \documentclass[../main/document.tex]{subfiles}
 
 \begin{document}
-\section{Гомоморфизм}
+\section{Поля. Кольца многочленов над полями. Корни многочлена, производная}
 %% my chapter 1 content
 %%
 %% more of my chapter 1 content
