--- a/exam/question18.tex
+++ b/exam/question18.tex
@@ -1,7 +1,7 @@
 \documentclass[../main/document.tex]{subfiles}
 
 \begin{document}
-\section{Декартовы произведения}
+\section{Конечные поля}
 %% my chapter 1 content
 %%
 %% more of my chapter 1 content
