--- a/exam/question18.tex
+++ b/exam/question18.tex
@@ -37,7 +37,7 @@ $$({(x+y)^p})^k=({x^p})^k+({y^p})^k$$
 \begin{thm}
 Если $F$ - конечное поле и $\abs{F}=m$, тогда существует корень уравнения типа $x^m-1$
 \begin{proof}
-
+Саси хуй быдло!!!
 \end{proof}
 \end{thm}
 \end{document}
