--- a/exam/question18.tex
+++ b/exam/question18.tex
@@ -38,8 +38,7 @@ $$({(x+y)^p})^k=({x^p})^k+({y^p})^k$$
 Если $F$ - конечное поле и $\abs{F}=m$, тогда существует корень уравнения типа $x^m-1$
 \begin{proof}
 Если в один миг
-Узнаем всё на свете
-Засияет тьма
+Яблочный спас
 \end{proof}
 \end{thm}
 \end{document}
