Added definitions in 15, 16, 17, 18

--- a/exam/question1.tex
+++ b/exam/question1.tex
@@ -32,8 +32,10 @@ $V$ - имена переменных
 \textbf{Универсальная алгебра} - пусть $\Sigma$ - сигнатура, тогда \textit{универсальная алгебра} сигнатуры $\Sigma$ - это пара вида $(A,I)$, где $A$ - произвольное непустое множество, а $I$ - некоторое отображение, которое для всякого $p^{(m)}\in \Sigma$, $I(p^{(m)})$ - $n$-местной операции на множестве
 \end{dfn}
 
-\begin{exm}
-Пример универсальной алгебры: пусть $\Sigma=(+^{(2)},\cdot^{(2)},-^{(1)},0^{(0)},1^{(0)})$, тогда
+\begin{exm}[Пример универсальной алгебры]
+Пусть 
+$$\Sigma=(+^{(2)},\cdot^{(2)},-^{(1)},0^{(0)},1^{(0)})$$
+тогда
 \begin{equation*}
 \begin{split}
 R=(\mathbb{R},I) :& I(+) - \text{сложение}\\
@@ -90,7 +92,11 @@ $h$ - изоморфизм между $A$ и $B$, то $h^{-1}$ - изоморф
 \begin{proof} пусть $b_1,...,b_{n_i}\in B$, тогда надо доказать
 $$h^{-1}(J(f_i)(b_1,...,b_{n_i}))=I(f_i)(h^{-1}(b_1),...,h^{-1}(b_{n_i}))$$
 Так как $b_1=h(a_1),...,b_{n_i}=h(a_{n_i})$,
-$$I(f_i)(h^{-1}(b_1),...,h^{-1}(b_{n_i}))=I(f_i)(h^{-1}(h(a_1)),...,h^{-1}(h(a_{n_i})))=I(f_i)(a_1,...,a_{n_i})$$
+\begin{multline*}
+I(f_i)(h^{-1}(b_1),...,h^{-1}(b_{n_i}))=I(f_i)(h^{-1}(h(a_1)),...,h^{-1}(h(a_{n_i})))\\
+=I(f_i)(a_1,...,a_{n_i})
+\end{multline*}
+$$$$
 По определению изоморфизма
 $$h^{-1}(J(f_i)(b_1,...,b_{n_i}))=h^{-1}(h(I(f_i)(a_1,...,a_{n_1})))=I(f_i)(a_1,...,a_{n_1})$$
 Из этих двух равенств следует то, что надо доказать
