--- a/exam/question16.tex
+++ b/exam/question16.tex
@@ -2,7 +2,25 @@
 
 \begin{document}
 \section{Поля. Кольца многочленов над полями. Корни многочлена, производная}
-%% my chapter 1 content
-%%
-%% more of my chapter 1 content
+\begin{dfn}[Многочлен над полем]
+Пусть $P$ - поле, многочлен над полем $P$ это выражение
+$$a_0+a_1x+a_2x^2+...+a_nx^n$$
+где $a_i\in P$ 
+\end{dfn}
+\begin{thm}
+Множество многочелнов над полем $P$ $P[x]$ - евклидово кольцо, где норма $\norm{p},p\in P[x]$ - степень многочлена
+\end{thm}
+\begin{dfn}[Корень многочлена]
+
+\end{dfn}
+\begin{thm}[Теорема Безу]
+Если $a$ - корень многочлена $p$, то $(x-a)|p(x)$
+\end{thm}
+\begin{dfn}[Корень кратности]
+$a$ - корень кратности $k$ многочлена $p(x)$, если $(x-a)^k|p(x)$
+\end{dfn}
+\begin{dfn}[Производная]
+Пусть $p(x)$ - многочлен и $p(x)=\sum_{i=0}^na_ix^i$ тогда его производная равна
+$$p'(x)=\sum_{i=0}^na_i\underbrace{1+1+...+1}_ix^{i-1}$$
+\end{dfn}
 \end{document}
