--- a/exam/question17.tex
+++ b/exam/question17.tex
@@ -2,7 +2,61 @@
 
 \begin{document}
 \section{Простые поля, расширения полей, поле разложения многочлена}
-%% my chapter 1 content
-%%
-%% more of my chapter 1 content
+\begin{dfn}[Простое поле]
+Поле -простое, если оно не содержит собственных подполей
+\end{dfn}
+\begin{dfn}[Собственное подполе]
+\end{dfn}
+\begin{thm}
+$F$ - простое поле, тогда $F\simeq Q$ или $F\simeq \mathcal{Z}_p$
+\begin{proof}
+
+\end{proof}
+\end{thm}
+\begin{cnsq}
+Внутри каждого поля есть простое подполе
+\begin{proof}
+
+\end{proof}
+\end{cnsq}
+\begin{dfn}[Характеристика поля]
+
+\end{dfn}
+\begin{dfn}[Неразложимый многочлен]
+Неразложимый многочлен - многочлен, который не раскладывается на множители
+\end{dfn}
+\begin{cnsq}
+\begin{enumerate}
+\item Многочлен 1 степени всегда неразложим
+\item Многочлен 2 или 3 степени неразложим $\Leftrightarrow$ не имеет корней
+\item Если многочлен степени большей 3 не разложим, то он не имеет корней
+\end{enumerate}
+\end{cnsq}
+\begin{cnsq}
+Неразложимый многочлены - простые элементы кольца многочленов
+\end{cnsq}
+\begin{thm}
+$R$ - кольцо главных идеалов, $c$ - простой элемент, тогда $cR$ - простой идеал
+\end{thm}
+\begin{cnsq}
+Если $p$ - неразложимый многочлен, тогда порождёныый им мдеал является максимальным
+\end{cnsq}
+\begin{cnsq}
+$\bigslant{F(x)}{\langle p\rangle}$ - поле
+\end{cnsq}
+\begin{thm}
+Для каждого многочлена существует расширение поля, в котором он разложится на линейные множители.
+\begin{proof}
+
+\end{proof}
+\end{thm}
+\begin{cnsq}
+Если $F$ - конечное поле, то поле расширений многочлена $p$ тоже конечно
+\end{cnsq}
+\begin{cnsq}
+$deg p =n$
+\begin{proof}
+
+\end{proof}
+\end{cnsq}
 \end{document}
