--- a/exam/question18.tex
+++ b/exam/question18.tex
@@ -2,7 +2,42 @@
 
 \begin{document}
 \section{Конечные поля}
-%% my chapter 1 content
-%%
-%% more of my chapter 1 content
+
+\begin{dfn}[Конечное поле]
+
+\end{dfn}
+
+\begin{cnsq}
+Конечные поля имеют конечную характеристику
+\end{cnsq}
+
+\begin{thm}
+Если $F$ - конечное поле характеристики $p$, то $\abs{F}=p^k$
+\begin{proof}
+
+\end{proof}
+\end{thm}
+\begin{cnsq}
+Если $m\neq p$, ТО поля из $m$ элементов не существует
+\end{cnsq}
+\begin{thm}
+Если $F$ - поле характеристики $p$, то
+$$(x+y)^p=x^p+y^p$$
+\begin{proof}
+
+\end{proof}
+\end{thm}
+\begin{thm}
+Если $F$ - поле характеристики $p$, то
+$$({(x+y)^p})^k=({x^p})^k+({y^p})^k$$
+\begin{proof}
+
+\end{proof}
+\end{thm}
+\begin{thm}
+Если $F$ - конечное поле и $\abs{F}=m$, тогда существует корень уравнения типа $x^m-1$
+\begin{proof}
+
+\end{proof}
+\end{thm}
 \end{document}
