--- a/exam/question7.tex
+++ b/exam/question7.tex
@@ -1,7 +1,7 @@
 \documentclass[../main/document.tex]{subfiles}
 
 \begin{document}
-\section{Группы, абелевы группы, циклические группы. Вложение моноида в группу}
+\section{Группы, абелевы группы, циклические\\ группы. Вложение моноида в группу}
 \begin{dfn}[Группа]
 Группа - моноид, в котором все элементы обратимы
 \end{dfn}
