--- a/exam/question3.tex
+++ b/exam/question3.tex
@@ -1,7 +1,7 @@
 \documentclass[../main/document.tex]{subfiles}
 
 \begin{document}
-\section{Гомоморфизмы, гомоморфные образы , конгруэнтности, фактор-алгебры}
+\section{Гомоморфизмы, гомоморфные образы,\\ конгруэнтности, фактор-алгебры}
 %% my chapter 1 content
 %%
 %% more of my chapter 1 content
