--- a/exam/question18.tex
+++ b/exam/question18.tex
@@ -37,7 +37,9 @@ $$({(x+y)^p})^k=({x^p})^k+({y^p})^k$$
 \begin{thm}
 Если $F$ - конечное поле и $\abs{F}=m$, тогда существует корень уравнения типа $x^m-1$
 \begin{proof}
-Саси хуй быдло!!!
+Если в один миг
+Узнаем всё на свете
+Засияет тьма
 \end{proof}
 \end{thm}
 \end{document}
